<resources>
    <string name="app_name">Chrysus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_pay">Pay</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_fragment">Payment Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="navigation_history">History</string>
    <string name="history_fragment">History Fragment</string>
    <string name="name_placeholder">Tyrion Lannister</string>
    <string name="user_email">tyrion@gmail.com</string>
    <string name="current_balance">Current Balance</string>
    <string name="balance_placeholder">Rp 1.000.000</string>
    <string name="user_phone_number">08112234456</string>
    <string name="user_sex">Male</string>
    <string name="current_temperature">Temperature</string>
    <string name="temperature_placeholder">26°C</string>
    <string name="main_features_headline">Main Features</string>
    <string name="nfc_pay">NFC Pay</string>
    <string name="qr_pay">QR Pay</string>
    <string name="send_money">Send Money</string>
    <string name="receive_money">Receive Money</string>
    <string name="chrysus_news_header">Chrysus News</string>
    <string name="news_title_placeholder">News Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_to_chrysus">Sign In</string>
    <string name="logout">Logout</string>
    <string name="payment_history">PAYMENT HISTORY</string>
    <string name="nfc_pay_text">PLACE YOUR PHONE NEAR THE SENSOR!</string>
    <string name="nfc_pay_headline">NFC PAY</string>
    <string name="qr_pay_headline">QR PAY</string>
    <string name="receive_money_headline">RECEIVE MONEY</string>
    <string name="receive_money_text">SCAN WITH THE CHRYSUS APP!</string>
    <string name="send_money_headline">SEND MONEY</string>
    <string name="phone_number">Phone Number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="city_placeholder">Silicon Valley</string>
    <string name="send_money_send_btn_text">SEND</string>
    <string name="completed_payment">Completed</string>
    <string name="name">Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Jenis_Kelamin">Gender</string>
    <string name="address">Address</string>
    <string name="pref_news_description_recommendations">Enable news recommendations</string>
    <string name="pref_news_recommendations">News Recommendation</string>
    <string name="pref_title_new_message_notifications">Notification</string>
    <string name="ambient_light">Ambient light</string>
</resources>
