<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.login.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_gap"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/large_gap"
            android:src="@drawable/thunder"
            android:tint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CHRYSUS"
            style="@style/red_text"
            android:textSize="@dimen/large_text"
            android:textAlignment="center"/>

        <LinearLayout
            style="@style/authentication_form"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/red_text"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            style="@style/authentication_form">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/red_text"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_gap"
            android:gravity="end">
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_background"
                android:backgroundTint="@color/colorPrimary"
                style="@style/white_text"
                android:text="@string/sign_in"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/login_modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="invisible">
    </View>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>